--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://leexfe.github.io/felix-bacon-cv-react",
   "name": "react-cv-bis",
   "version": "0.1.0",
   "private": true,
@@ -6,16 +7,20 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "node-sass": "^4.12.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0",
+    "sass-loader": "^10.2.1"
   }
 }
